Meta Tags Included

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="author" content="Mertcan Yurttaş"/>
+        <meta name="keywords" content="JS, JavaScript, Documentation"/>
+        <meta name="description" content="Javascript learning document."/>
+
         <title>Technical Documentation Page</title>
+
         <link rel="icon" type="image/png" href="js-documentation-icon.png"/>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
         <nav id="navbar">
